vcs/specs/parser/fail/types/invalid_using_type.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, function, using, error
// @description: Test detection of using clause without context list
// @expected-error: E018

// using clause must have context specification
type Callback is fn() using;
